# CondiNILM

./: .gitignore  CUsersWorkstationWorkspaceCondiNILMtmp_v75_expes.py  CUsersWorkstationWorkspaceCondiNILMtmp_v75_run_one_expe.py  README.md  environment.yml  environment_mac.yaml  environment_win.yaml  pyproject.toml  requirements.txt  smoke_test_hpo.json  smoke_test_nilmformer.json  smoke_test_nilmformer_multi.json  viz_architecture_spec.md
WebGL/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
best_experiments/: experiment_report_v9.md  experiment_report_v9_corrected.md  final_experiment_report.md  final_results_tables.md  v9_results_tables.md
configs/: baseline_configs.yaml  dataset_params.yaml  datasets.yaml  expes.yaml  hpo_search_spaces.yaml  hpo_sparse_devices.yaml  models.yaml  redd_multi_fd.yaml
docs/: NILMFormer_Mermaid.md  appendix_nilm_baseline_analysis.md  chapter3_methodology_cn.md  chapter3_methodology_en.md  chapter4_implementation_cn.md  chapter4_implementation_en.md  chapter5_experiments_cn.md  chapter5_experiments_en.md  chapter6_conclusion_cn.md  chapter6_conclusion_en.md  chapter7_future_work_cn.md  chapter7_limitations_cn.md  chapter7_limitations_en.md  chapter8_future_work_cn.md  chapter8_future_work_en.md  dataset_splits.md  device_optimization_report.md  loss_design.md  section4_experiment.md
revisions/: 5.2_ukdale_results.tex  5.3_cross_dataset.tex  5.4_ablation_study.tex  5.5_discussion.tex
scripts/: all_results.json  analyze_appliance_stats.py  analyze_redd_devices.py  check_final_eval.py  check_json_keys.py  (+31 more)
(+82 files in other folders)
