[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "condinilm"
version = "0.8.0"
description = "CondiNILM: Conditional Non-Intrusive Load Monitoring with NILMFormer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tqdm>=4.60",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "matplotlib>=3.7",
    "tensorboard>=2.12",
    "streamlit>=1.20",
    "optuna>=3.0",
    "einops>=0.6",
]

[project.scripts]
condinilm-train = "scripts.run_experiment:main"

[tool.setuptools.packages.find]
include = ["src*", "scripts*", "configs*"]
